syntax = "proto3";
package chat;

option go_package="/chat";

message Message {
  string body = 1;
  string id = 2;
  string ipAddress = 3;
}

service ChatService {
  rpc SayHello(Message) returns (Message) {}
}
